# MyBoilerplate

./: .coveragerc  .dockerignore  .env-example  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  pyproject.toml  requirements.txt
hooks/: piiip.sh  requirements.txt
